--- a/CovidVaccines.ipynb
+++ b/CovidVaccines.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "CovidVaccines.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMGt4v7Xr6uPogY0g/m7PvN",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +18,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/AlstonQ/Cowin-Vaccine-Slot-Tracking-Script/blob/main/CovidVaccines.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -32,7 +44,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DlEAAZnG43qD",
-        "outputId": "2c5e4953-b783-4c89-e0e1-9dbdd2a29f95"
+        "outputId": "2d91305f-fdec-4d62-ed8c-56dbbff0984d"
       },
       "source": [
         "import requests\n",
@@ -63,7 +75,7 @@
         "                    counter = 1\n",
         "        if counter == 0:\n",
         "            print(\"No vaccine found\")\n",
-        "    if dose == 2:\n",
+        "    else:\n",
         "      if r.status_code==200:\n",
         "        response = r.json()['centers']\n",
         "        counter = 0\n",
@@ -80,8 +92,6 @@
         "                    counter = 1\n",
         "        if counter == 0:\n",
         "            print(\"No vaccine found\")\n",
-        "    else:\n",
-        "      print(\"Invalid Input\")\n",
         "    \n",
         "\n",
         "# Dynamic Input Code, Uncomment to use\n",
@@ -91,41 +101,18 @@
         "#Age = int(input(\"Enter your age type \\nPress 1 for below 45\\nPress 2 for above 45: \"))\n",
         "#dose = int(input(\"Enter Dose Type: 1 for First, 2 for Second: \"))\n",
         "\n",
-        "pincode = \"400093\"\n",
-        "date    = \"04-06-2021\"\n",
-        "age     = 2\n",
-        "dose    = 2\n",
+        "pincode = \"400064\"\n",
+        "date    = \"05-06-2021\"\n",
+        "age     = 1\n",
+        "dose    = 1\n",
         "find_vaccines_pincode(pincode, date, age, dose)"
       ],
-      "execution_count": 3,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Center Name Poonam Darshan Sunder Nagar HP\n",
-            "Center Date 05-06-2021\n",
-            "Age Limit 45\n",
-            "Number of Doses 25\n",
-            "Dose Type: Second Dose\n",
-            "Slots ['10:00AM-11:00AM', '11:00AM-12:00PM', '12:00PM-01:00PM', '01:00PM-03:00PM']\n",
-            "\n",
-            "\n",
-            "Center Name SUNDAR NAGARHP MATOSHRI SPORTS\n",
-            "Center Date 05-06-2021\n",
-            "Age Limit 45\n",
-            "Number of Doses 27\n",
-            "Dose Type: Second Dose\n",
-            "Slots ['10:00AM-11:00AM', '11:00AM-12:00PM', '12:00PM-01:00PM', '01:00PM-03:00PM']\n",
-            "\n",
-            "\n",
-            "Center Name Sarvoday Nagar HP Gurudwara\n",
-            "Center Date 05-06-2021\n",
-            "Age Limit 45\n",
-            "Number of Doses 22\n",
-            "Dose Type: Second Dose\n",
-            "Slots ['10:00AM-11:00AM', '11:00AM-12:00PM', '12:00PM-01:00PM', '01:00PM-03:00PM']\n",
-            "\n",
-            "\n"
+            "No vaccine found\n"
           ],
           "name": "stdout"
         }
@@ -261,7 +248,7 @@
         "                    counter = 1\n",
         "        if counter == 0:\n",
         "            print(\"No vaccine found\")\n",
-        "    if dose == 2:\n",
+        "    else:\n",
         "      if r.status_code==200:\n",
         "        response = r.json()['centers']\n",
         "        counter = 0\n",
@@ -277,11 +264,9 @@
         "                    print(\"\\n\")\n",
         "                    counter = 1\n",
         "        if counter == 0:\n",
-        "            print(\"No vaccine found\")\n",
-        "    else:\n",
-        "      print(\"Invalid Input\")"
+        "            print(\"No vaccine found\")"
       ],
-      "execution_count": 21,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -291,14 +276,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6nJ0vczKP7q7",
-        "outputId": "8a522993-f061-47d8-9301-7e602812081c"
+        "outputId": "4df318ca-79e7-4e9f-9dd6-c201ccb8b24d"
       },
       "source": [
         "district = \"Mumbai\"\n",
         "d_id     = find_D_id(df,district)\n",
-        "date     = \"04-06-2021\"\n",
+        "date     = \"05-06-2021\"\n",
         "age      = 1\n",
-        "dose     = 2\n",
+        "dose     = 1\n",
         "find_vaccines_district(d_id, date, age, dose)\n",
         "\n",
         "#district = input(\"Enter district name: \")\n",
@@ -306,39 +291,27 @@
         "#Age = int(input(\"Enter your age type \\nPress 1 for below 45\\nPress 2 for above 45: \"))\n",
         "#dose = int(input(\"Enter Dose Type: 1 for First, 2 for Second: \"))"
       ],
-      "execution_count": 23,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Center Name Jaslok Hosp- Villa Theresa Sch\n",
-            "Center Date 04-06-2021\n",
-            "Age Limit 18\n",
-            "Number of Doses 3\n",
-            "Dose Type: Second Dose\n",
-            "Slots ['09:00AM-10:00AM', '10:00AM-11:00AM', '11:00AM-12:00PM', '12:00PM-01:00PM']\n",
-            "\n",
-            "\n",
-            "Center Name CAMA SESSION 1\n",
-            "Center Date 04-06-2021\n",
-            "Age Limit 18\n",
-            "Number of Doses 10\n",
-            "Dose Type: Second Dose\n",
-            "Slots ['10:00AM-11:00AM', '11:00AM-12:00PM', '12:00PM-01:00PM', '01:00PM-03:00PM']\n",
-            "\n",
-            "\n",
-            "Center Name Cooper Hospital 1\n",
-            "Center Date 04-06-2021\n",
-            "Age Limit 18\n",
-            "Number of Doses 1\n",
-            "Dose Type: Second Dose\n",
-            "Slots ['10:00AM-11:00AM', '11:00AM-12:00PM', '12:00PM-01:00PM', '01:00PM-03:00PM']\n",
-            "\n",
-            "\n"
+            "No vaccine found\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dOOfyx9Xbsnv"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
